# django-bm25-search

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
sample_project/article/migrations/: 0001_initial.py
src/django_hawkeye/: __init__.py
src/django_pg_textsearch/: __init__.py  apps.py  checks.py  expressions.py  managers.py  operations.py
src/django_pg_textsearch/migrations/: 0001_install_pg_textsearch.py
tests/: conftest.py  models.py  settings.py
tests/integration/: test_operations.py  test_search.py
tests/unit/: test_expressions.py  test_indexes.py  test_operations.py
