[project]
name = "django-pg-textsearch"
version = "0.1.0"
description = "Django integration for PostgreSQL BM25 full-text search using pg_textsearch extension"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]
keywords = ["django", "postgresql", "bm25", "full-text-search", "search"]

dependencies = [
    "django>=4.2",
    "psycopg[binary]>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-pg-textsearch"
Documentation = "https://github.com/yourusername/django-pg-textsearch#readme"
Repository = "https://github.com/yourusername/django-pg-textsearch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_pg_textsearch"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [
    ".",
    "src",
]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "django_db: mark test as needing database access",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
